Fixed styling issue where buttons wouldn't style on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,10 @@ body {
 
 input[type="button"]{ -webkit-appearance: none; }
 
+input {
+    -webkit-appearance: none;
+}
+
 h1 {
     font-size: 30px;
     color: #cb99c5; 
@@ -91,4 +95,8 @@ p {
 				0 0 0 2px rgba(255,255,255,0.15) inset,
                 0 0 0 1px rgba(0,0,0,0.4);
     outline:0;
+}
+
+input {
+    -webkit-appearance: none;
 }
